Improved networking and removed unnecessary code.

--- a/Minecraft/Minecraft.csproj
+++ b/Minecraft/Minecraft.csproj
@@ -258,7 +258,9 @@
     <None Include="Shaders\BasicShader\fragmentShader.glsl" />
     <None Include="Shaders\BasicShader\vertexShader.glsl" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="IO\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
