--- a/Minecraft/Minecraft.csproj
+++ b/Minecraft/Minecraft.csproj
@@ -125,9 +125,10 @@
     <Compile Include="Physics\RayTraceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\LightDebugRenderer.cs" />
+    <Compile Include="Render\Lighting\LightMap.cs" />
     <Compile Include="Render\MasterRenderer.cs" />
     <Compile Include="Render\MeshGenerator\EntityMeshGenerator.cs" />
-    <Compile Include="Render\MeshGenerator\LightMesh.cs" />
+    <Compile Include="Render\Lighting\FloodFillLight.cs" />
     <Compile Include="Render\MeshGenerator\MeshGenerator.cs" />
     <Compile Include="Render\PlayerHoverBlockRenderer.cs" />
     <Compile Include="Render\ProjectionMatrixInfo.cs" />
