--- a/Minecraft/Minecraft.csproj
+++ b/Minecraft/Minecraft.csproj
@@ -125,7 +125,10 @@
     <Compile Include="Physics\RayTraceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\LightDebugRenderer.cs" />
+    <Compile Include="Render\Lighting\Light.cs" />
+    <Compile Include="Render\Lighting\LightChannel.cs" />
     <Compile Include="Render\Lighting\LightMap.cs" />
+    <Compile Include="Render\Lighting\LightUtils.cs" />
     <Compile Include="Render\MasterRenderer.cs" />
     <Compile Include="Render\MeshGenerator\EntityMeshGenerator.cs" />
     <Compile Include="Render\Lighting\FloodFillLight.cs" />
