--- a/Minecraft/Minecraft.csproj
+++ b/Minecraft/Minecraft.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Physics\RayTraceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\LightDebugRenderer.cs" />
+    <Compile Include="Render\Lighting\ILightSource.cs" />
     <Compile Include="Render\Lighting\Light.cs" />
     <Compile Include="Render\Lighting\LightChannel.cs" />
     <Compile Include="Render\Lighting\LightMap.cs" />
