--- a/Minecraft/Minecraft.csproj
+++ b/Minecraft/Minecraft.csproj
@@ -125,14 +125,14 @@
     <Compile Include="Physics\RayTraceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\LightDebugRenderer.cs" />
-    <Compile Include="Render\Lighting\ILightSource.cs" />
-    <Compile Include="Render\Lighting\Light.cs" />
-    <Compile Include="Render\Lighting\LightChannel.cs" />
-    <Compile Include="Render\Lighting\LightMap.cs" />
-    <Compile Include="Render\Lighting\LightUtils.cs" />
+    <Compile Include="World\Lighting\ILightSource.cs" />
+    <Compile Include="World\Lighting\Light.cs" />
+    <Compile Include="World\Lighting\LightChannel.cs" />
+    <Compile Include="World\Lighting\LightMap.cs" />
+    <Compile Include="World\Lighting\LightUtils.cs" />
     <Compile Include="Render\MasterRenderer.cs" />
     <Compile Include="Render\MeshGenerator\EntityMeshGenerator.cs" />
-    <Compile Include="Render\Lighting\FloodFillLight.cs" />
+    <Compile Include="World\Lighting\FloodFillLight.cs" />
     <Compile Include="Render\MeshGenerator\MeshGenerator.cs" />
     <Compile Include="Render\PlayerHoverBlockRenderer.cs" />
     <Compile Include="Render\ProjectionMatrixInfo.cs" />
