--- a/Minecraft/Minecraft.csproj
+++ b/Minecraft/Minecraft.csproj
@@ -125,6 +125,10 @@
     <Compile Include="Physics\RayTraceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render\LightDebugRenderer.cs" />
+    <Compile Include="Render\MeshGenerator\SmoothLighting.cs" />
+    <Compile Include="World\Utils\ObjectPool.cs" />
+    <Compile Include="World\Utils\BlockPropagation.cs" />
+    <Compile Include="World\Utils\Corner.cs" />
     <Compile Include="World\Lighting\ILightSource.cs" />
     <Compile Include="World\Lighting\Light.cs" />
     <Compile Include="World\Lighting\LightChannel.cs" />
@@ -235,7 +239,7 @@
     <Compile Include="World\Blocks\Block\BlockSugarCane.cs" />
     <Compile Include="World\Blocks\Block\BlockTNT.cs" />
     <Compile Include="World\Blocks\Block\BlockWheat.cs" />
-    <Compile Include="World\Blocks\Direction.cs" />
+    <Compile Include="World\Utils\Direction.cs" />
     <Compile Include="Tools\VAOModel.cs" />
     <Compile Include="World\Chunks\Chunk.cs" />
     <Compile Include="Render\MeshGenerator\OpaqueMeshGenerator.cs" />
